--- a/html/ccpayoffcalc.html
+++ b/html/ccpayoffcalc.html
@@ -145,7 +145,7 @@
         .charts-column {
             display: flex;
             flex-direction: column; /* Stack charts vertically */
-            gap: 20px; /* Space between the two charts */
+            gap: 2in; /* Added ~2 inches (192px at 96dpi) of space between the two charts */
             flex-shrink: 0; /* Prevent charts column from shrinking too much */
             min-width: 300px; /* Ensure charts column has a minimum width */
             max-width: 350px; /* Limit the overall width of the charts column */
